Fix some alignments

--- a/theme/less/gouvfr-post.less
+++ b/theme/less/gouvfr-post.less
@@ -58,11 +58,6 @@ body.post-display {
 
     //Action toolbar
     .main-toolbar {
-        .btn-toolbar {
-            .pull-right();
-            margin-right: 8px;
-        }
-
         margin-bottom: 20px
     }
 
@@ -101,4 +96,3 @@ body.post-display {
     }
 
 }
-
